err/vpp-config.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/netaddr'...
Listing './lib/python3.5/site-packages/netaddr/contrib'...
Listing './lib/python3.5/site-packages/netaddr/eui'...
Listing './lib/python3.5/site-packages/netaddr/ip'...
Listing './lib/python3.5/site-packages/netaddr/strategy'...
Listing './lib/python3.5/site-packages/netaddr-0.7.19.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/vpp_config-17.10.6.dist-info'...
Compiling './lib/python3.5/site-packages/vpp_config.py'...
***   File "./lib/python3.5/site-packages/vpp_config.py", line 61
    print "Please answer Y, N or Return."
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/vpplib'...
Compiling './lib/python3.5/site-packages/vpplib/AutoConfig.py'...
***   File "./lib/python3.5/site-packages/vpplib/AutoConfig.py", line 113
    print "Please enter a valid IPv4 address."
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vpplib/VPPUtil.py'...
***   File "./lib/python3.5/site-packages/vpplib/VPPUtil.py", line 398
    print "Need to implement get vms"
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vpplib/VppHugePageUtil.py'...
***   File "./lib/python3.5/site-packages/vpplib/VppHugePageUtil.py", line 98
    print "  {:30}: {}".format("Total System Memory",
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vpplib/VppPCIUtil.py'...
***   File "./lib/python3.5/site-packages/vpplib/VppPCIUtil.py", line 270
    print header
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
Listing './vpp'...
Listing './vpp/vpp-config'...
Listing './vpp/vpp-config/configs'...
Listing './vpp/vpp-config/dryrun'...
Listing './vpp/vpp-config/dryrun/default'...
Listing './vpp/vpp-config/dryrun/sysctl.d'...
Listing './vpp/vpp-config/dryrun/vpp'...
Listing './vpp/vpp-config/scripts'...
